--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -24,3 +24,10 @@
       font-size: 1.6rem;
     }
   }
+
+  @media (min-width: 1441px) and (max-width: 1920px) {
+    .rightsReserved {
+      height: 5.88rem;
+      font-size: 2rem;
+    }
+  }
