--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -14,7 +14,17 @@
     color: #fff;
     font-size: 1.8rem;
   }
-  
+
+  .ficoBar {
+    padding-left: 5px;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .ficoBar:hover {
+    color: #FFD25A;
+  }
+
   footer {
     background-color: #3a3333;
   }
