--- a/sass/404.scss
+++ b/sass/404.scss
@@ -4,7 +4,6 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 30px;
     align-items: center;
     justify-content: center;
     
@@ -61,3 +60,65 @@ a:active{
     border: none;
     right: 420px;
 }
+
+@media (min-width: 360px) and (max-width: 540px) {
+    .botonError {
+        margin-top: 280px;
+    }
+
+    .h1Error {
+        margin-top: 170px;
+        font-size: 22px;
+    }
+}
+
+@media (min-height: 741px) and (max-height: 950px) {
+    .botonError {
+        margin-top: 340px;
+    }
+
+    .h1Error {
+        margin-top: 240px;
+        font-size: 30px;
+    }
+}
+
+@media (min-height: 951px) and (max-height: 1024px) {
+    .botonError {
+        margin-top: 380px;
+    }
+
+    .h1Error {
+        margin-top: 280px;
+        font-size: 28px;
+    }
+}
+
+@media (min-height: 1025px) and (max-height: 1080px) {
+    .botonError {
+        margin-top: 380px;
+        padding: 20px 40px;
+    }
+
+    .h1Error {
+        margin-top: 280px;
+        font-size: 36px;
+    }
+}
+
+@media (min-height: 1081px) and (max-height: 1366px) {
+    .botonError {
+        margin-top: 520px;
+        padding: 28px 48px;
+    }
+
+    button {
+        font-size: 20px;
+    }
+
+    .h1Error {
+        margin-top: 380px;
+        font-size: 36px;
+    }
+}
+
