--- a/css/style.css
+++ b/css/style.css
@@ -878,3 +878,11 @@ a:active {
   .h1Error {
     margin-top: 380px;
     font-size: 36px; } }
+
+@media (min-height: 2000px) and (max-height: 2500px) {
+  .botonError {
+    margin-top: 600px;
+    padding: 28px 48px; }
+  .h1Error {
+    margin-top: 460px;
+    font-size: 36px; } }
