--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,8 @@ footer {
 
 @media screen and (max-width: 600px) {
   .rightsReserved {
-    font-size: 1.6rem; } }
+    font-size: 1.6rem;
+    height: 5.2rem; } }
 
 @media (min-width: 1441px) and (max-width: 1920px) {
   .rightsReserved {
